--- a/ApiFilter.AspNet/ApiKeyFilter.csproj
+++ b/ApiFilter.AspNet/ApiKeyFilter.csproj
@@ -9,10 +9,9 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Database" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.8" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="3.1.8" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
     </ItemGroup>
 
 </Project>
