--- a/ApiKeyFilter/ApiKeyFilter.csproj
+++ b/ApiKeyFilter/ApiKeyFilter.csproj
@@ -9,6 +9,10 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational.Design" Version="1.1.6" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.8" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="3.1.8" />
