--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@
 .DS_Store
 
 /database/
-*.[Ss]qlite*
+*.[Ss]qlite
+*.[Ss]qlite-shm
+*.[Ss]qlite-wal
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
