--- a/ApiKeyFilter/ApiKeyFilter.csproj
+++ b/ApiKeyFilter/ApiKeyFilter.csproj
@@ -14,6 +14,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="10.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
         <PrivateAssets>all</PrivateAssets>
