--- a/ApiKeyFilter/ApiKeyFilter.csproj
+++ b/ApiKeyFilter/ApiKeyFilter.csproj
@@ -11,8 +11,10 @@
         <RepositoryUrl>https://github.com/kfman/ApiKeyFilter</RepositoryUrl>
         <RepositoryType>GIT</RepositoryType>
         <PackageTags>ASP.NET ApiKey Middleware Filter</PackageTags>
+        <PackageLicense>https://raw.githubusercontent.com/kfman/ApiKeyFilter/master/license.txt</PackageLicense>
     </PropertyGroup>
 
+    
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="10.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
