--- a/ApiKeyFilter/ApiKeyFilter.csproj
+++ b/ApiKeyFilter/ApiKeyFilter.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
         <Title>API Key Filter</Title>
         <Authors>Klaus Fischer</Authors>
         <Description>SQLite based API Key filter</Description>
@@ -11,18 +10,20 @@
         <RepositoryUrl>http://cardassia:5100/Allgemeines/ApiFilter.AspNet</RepositoryUrl>
         <RepositoryType>GIT</RepositoryType>
         <PackageTags>ASP.NET ApiKey Middleware Filter</PackageTags>
+        <LangVersion>10</LangVersion>
+        <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="AutoMapper" Version="10.0.0" />
+      <PackageReference Include="AutoMapper" Version="11.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational.Design" Version="1.1.6" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.8" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="3.1.8" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="6.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
     </ItemGroup>
 
