Pattern to connect user to role needed. Controller is not optimal solution

--- a/ApiKeyFilter/ApiKeyFilter.csproj
+++ b/ApiKeyFilter/ApiKeyFilter.csproj
@@ -12,6 +12,7 @@
         <PackageTags>ASP.NET ApiKey Middleware Filter</PackageTags>
         <LangVersion>10</LangVersion>
         <TargetFramework>net6.0</TargetFramework>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
